# rewind

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
rewind/: __init__.py  __main__.py  client.py  main.py
rewind/plugins/: __init__.py  twitch.py
rewind/plugins/utils/: __init__.py  filterdict.py
tests/: test_rewind.py
