[tool.poetry]
name = "rewind"
version = "0.1.0"
description = ""
authors = ["Nikolaus Gullotta <nik@harrisonconsoles.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlink = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
prospector = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
