[tool.poetry]
name = "rewind"
version = "0.1.0"
description = ""
authors = ["Nikolaus Gullotta <nik@harrisonconsoles.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.8.9"
streamlink = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
prospector = "^1.3.1"
bandit = "^1.7.0"
black = "^21.10b0"

[tool.poetry.scripts]
rewind = "rewind.main:run"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

